# rules_multitool

./: MODULE.bazel  lockfile.schema.json  readme.md
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/: renovate.json
.github/workflows/: ci.yml  publish-to-bcr.yml  release.yml  release_prep.sh
examples/module/: BUILD.bazel  test_gh_aliases.yaml
examples/workspace/: BUILD.bazel
multitool/: BUILD.bazel  extension.bzl
multitool/private/: BUILD.bazel  lockfile.bzl  multitool.bzl  run_in.bzl  templates.bzl
multitool/private/hub_repo_template/: toolchain_info.bzl.template
multitool/private/hub_repo_tool_template/: tool.bzl.template
