"multitool"

module(
    name = "rules_multitool",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_lib", version = "3.0.0")
bazel_dep(name = "bazel_features", version = "1.11.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.10")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1", dev_dependency = True)

# ensure toolchains get registered
multitool = use_extension("//multitool:extension.bzl", "multitool")
use_repo(multitool, "multitool")

register_toolchains("@multitool//toolchains:all")
