load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_multitool//multitool:cwd.bzl", "cwd")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//:add_dummy_file.bzl", "add_dummy_file")

sh_test(
    name = "integration_test",
    srcs = ["integration_test.sh"],
    args = [
        "$(location @multitool//tools/target-determinator)",
    ],
    data = ["@multitool//tools/target-determinator"],
)

sh_test(
    name = "integration_test_cwd",
    srcs = ["integration_test.sh"],
    args = [
        "$(location @multitool//tools/target-determinator:cwd)",
    ],
    data = ["@multitool//tools/target-determinator:cwd"],
    env = {"BUILD_WORKING_DIRECTORY": "."},
)

sh_test(
    name = "integration_test_workspace_root",
    srcs = ["integration_test.sh"],
    args = [
        "$(location @multitool//tools/target-determinator:workspace_root)",
    ],
    data = ["@multitool//tools/target-determinator:workspace_root"],
    env = {"BUILD_WORKSPACE_DIRECTORY": "."},
)

add_dummy_file(
    name = "add_dummy_file",
    tool = "@multitool//tools/target-determinator",
)

cwd(
    name = "add_dummy_file_cwd",
    tool = ":add_dummy_file",
)

sh_test(
    name = "integration_test_add_dummy_file_cwd",
    srcs = ["integration_test.sh"],
    args = [
        "$(location :add_dummy_file_cwd)",
    ],
    data = [":add_dummy_file_cwd"],
    env = {"BUILD_WORKING_DIRECTORY": "."},
)

genrule(
    name = "run_gh_alias_import",
    srcs = ["test_gh_aliases.yaml"],
    outs = ["run_gh_alias_import.out"],
    cmd = "$(location @multitool//tools/gh:cwd) alias import test_gh_aliases.yaml && touch run_gh_alias_import.out",
    tools = ["@multitool//tools/gh:cwd"],
)

build_test(
    name = "run_gh_alias_import_test",
    targets = [":run_gh_alias_import.out"],
)
