sh_test(
    name = "integration_test",
    srcs = ["integration_test.sh"],
    args = [
        "$(location @multitool//tools/target-determinator)",
    ],
    data = ["@multitool//tools/target-determinator"],
)

sh_test(
    name = "integration_test_cwd",
    srcs = ["integration_test.sh"],
    args = [
        "$(location @multitool//tools/target-determinator:cwd)",
    ],
    data = ["@multitool//tools/target-determinator:cwd"],
    env = {"BUILD_WORKING_DIRECTORY": "."},
)

sh_test(
    name = "integration_test_workspace_root",
    srcs = ["integration_test.sh"],
    args = [
        "$(location @multitool//tools/target-determinator:workspace_root)",
    ],
    data = ["@multitool//tools/target-determinator:workspace_root"],
    env = {"BUILD_WORKSPACE_DIRECTORY": "."},
)
